tests/field/set_evaluation_order.my
undefined1.bar = undefined2 # expect error: undefined1 is not defined
